--- a/MyApplication/ViewDemo/app/build.gradle
+++ b/MyApplication/ViewDemo/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 28//23无，25有
     buildToolsVersion "26.0.2"
     dataBinding {
         enabled true
@@ -9,7 +9,7 @@ android {
     defaultConfig {
         applicationId "com.test.viewdemo"
         minSdkVersion 15
-        targetSdkVersion 21
+        targetSdkVersion 20
         versionCode 1
         versionName "1.0"
     }
